syntax = "proto3";

package shopagolic.email.v1beta1;

option go_package = "github.com/demeero/shopagolic/services/proto/gen/go/shopagolic/email/v1beta1";

import "shopagolic/money/v1/money.proto";

service EmailService {
  rpc SendOrderConfirmation(SendOrderConfirmationRequest) returns (SendOrderConfirmationResponse) {}
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderItem {
  CartItem item = 1;
  money.v1.Money cost = 2;
}

message OrderResult {
  string order_id = 1;
  string shipping_tracking_id = 2;
  money.v1.Money shipping_cost = 3;
  Address shipping_address = 4;
  repeated OrderItem items = 5;
}

message SendOrderConfirmationRequest {
  string email = 1;
  OrderResult order = 2;
}

message SendOrderConfirmationResponse {}
